--- a/hanggu-core/pom.xml
+++ b/hanggu-core/pom.xml
@@ -16,6 +16,7 @@
     <maven.compiler.target>8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <hessinal2.version>4.0.66</hessinal2.version>
+    <hutool-version>5.3.10</hutool-version>
   </properties>
 
   <dependencies>
@@ -49,7 +50,13 @@
     <dependency>
       <groupId>com.caucho</groupId>
       <artifactId>hessian</artifactId>
-      <scope>${hessinal2.version}</scope>
+      <version>${hessinal2.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>cn.hutool</groupId>
+      <artifactId>hutool-all</artifactId>
+      <version>${hutool-version}</version>
     </dependency>
 
   </dependencies>
