--- a/hanggu-core/pom.xml
+++ b/hanggu-core/pom.xml
@@ -17,6 +17,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <hessinal2.version>4.0.66</hessinal2.version>
     <hutool-version>5.3.10</hutool-version>
+    <jedis.version>2.9.0</jedis.version>
   </properties>
 
   <dependencies>
@@ -57,6 +58,12 @@
       <groupId>cn.hutool</groupId>
       <artifactId>hutool-all</artifactId>
       <version>${hutool-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>${jedis.version}</version><!--$NO-MVN-MAN-VER$ -->
     </dependency>
 
   </dependencies>
