feature：增加spring-boot仓库下载

--- a/pom.xml
+++ b/pom.xml
@@ -104,4 +104,18 @@
     </dependencies>
   </dependencyManagement>
 
+  <!-- 解决 spring-boot jar 包下载问题 -->
+  <repositories>
+    <repository>
+      <id>spring-snapshots</id>
+      <url>https://repo.spring.io/libs-snapshot</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>spring-snapshots</id>
+      <url>https://repo.spring.io/libs-snapshot</url>
+    </pluginRepository>
+  </pluginRepositories>
+
 </project>
