--- a/hangu-core/hangu-starter/pom.xml
+++ b/hangu-core/hangu-starter/pom.xml
@@ -29,6 +29,13 @@
       <artifactId>hangu-consumer</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
