--- a/hangu-core/hangu-consumer/pom.xml
+++ b/hangu-core/hangu-consumer/pom.xml
@@ -23,6 +23,14 @@
       <artifactId>hangu-common</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+      <optional>true</optional>
+    </dependency>
+
   </dependencies>
 
 </project>
