--- a/hangu-rpc-spring-boot-starter/pom.xml
+++ b/hangu-rpc-spring-boot-starter/pom.xml
@@ -47,6 +47,13 @@
       <artifactId>lombok</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.hangu.center</groupId>
+      <artifactId>hangu-client</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <optional>true</optional>
+    </dependency>
+
   </dependencies>
 
 </project>
