添加新的节点测试

--- a/hangu-demo/hangu-provider-demo/src/main/resources/application.yml
+++ b/hangu-demo/hangu-provider-demo/src/main/resources/application.yml
@@ -16,4 +16,4 @@ hangu:
         password: yyy
 
   center:
-    peer-node-hosts: localhost:9991
+    peer-node-hosts: localhost:9991,localhost:9992
