feat：接入hangu-register

--- a/hangu-core/hangu-starter/pom.xml
+++ b/hangu-core/hangu-starter/pom.xml
@@ -29,6 +29,12 @@
       <artifactId>hangu-consumer</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.hangu.center</groupId>
+      <artifactId>hangu-client</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
 </project>
