feat：去掉无效的类引用

--- a/hangu-demo/hangu-provider-demo/src/main/resources/application.yml
+++ b/hangu-demo/hangu-provider-demo/src/main/resources/application.yml
@@ -5,7 +5,7 @@ hangu:
     provider:
       port: 8089 # 提供者将要暴露的端口
     registry:
-      protocol: hangu-register # 选择zk作为注册中心
+      protocol: hangu-register # 选择 hangu-register 作为注册中心，如果是自己提供注册中心，这里填 none 即可
       redis:
         nodes: ip:port,ip2:port2 # redis哨兵模式哨兵集群地址
         master: xxx # master的名字
